--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore:
-  firebase_database:
-  firebase_storage:
+#  cloud_firestore:
+#  firebase_database:
+#  firebase_storage:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
